# template-python-pipeline

./: cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.repo_name}}/: README.md  environment.yml  pyproject.toml  requirements.in  setup.cfg  tox.ini
{{cookiecutter.repo_name}}/.github/workflows/: unit_tests.yml
{{cookiecutter.repo_name}}/tests/models/: test_adder.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/: __init__.py  __main__.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/config/: __init__.py  {{cookiecutter.repo_name}}.toml
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/models/: __init__.py  adder.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/pipelines/: __init__.py  {{cookiecutter.default_pipeline}}.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/utils/: log.py
