[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "{{ cookiecutter.repo_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
readme = "README.md"
authors = [
    { name = "{{ cookiecutter.your_name }}", email = "{{ cookiecutter.your_email }}" },
]
license = { file = "LICENSE" }
classifiers = []
keywords = []
dependencies = []
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = ""

[project.scripts]
{{ cookiecutter.exe_name }} = "{{ cookiecutter.repo_name }}.__main__:main"

[tool.black]
line-length = 88
