
[metadata]
name = {{ cookiecutter.repo_name }}
version = {{ cookiecutter.version }}
description = {{ cookiecutter.project_short_description }}
long_description = file: README.md

[options]
include_package_data = True
packages = find:

[options.packages.find]
exclude = notebooks, tests

[options.entry_points]
console_scripts =
    {{ cookiecutter.exe_name }} = {{ cookiecutter.repo_name }}.__main__:main



[flake8]
max_line_length = 88
select = C,E,F,W,B,B950
ignore = E501,W503,E203


[isort]
multi_line_output             = 3
profile                       = black
import_heading_stdlib         = Standard library imports
import_heading_thirdparty     = Third party imports
import_heading_firstparty     = {{ cookiecutter.project_name }} imports
